fixed hiding off-screen elements and overflow scroll issue

--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -99,6 +99,7 @@ hr {
     text-transform: uppercase;
     font-size: 0.8em;
     color: #a3a1b5;
+    margin-top: 20px;
 }
 
 .nav-item {
@@ -397,7 +398,8 @@ hr {
 	}
 }
 
-.right-side {
+.inner-col {
+    max-height: 100%;
     overflow: auto;
 }
 
